@@ -22,8 +22,6 @@ import cz.cvut.kbss.jopa.model.MultilingualString;
 import cz.cvut.kbss.jopa.model.descriptors.Descriptor;
 import cz.cvut.kbss.termit.environment.Generator;
 import cz.cvut.kbss.termit.exception.AnnotationGenerationException;
-import cz.cvut.kbss.termit.model.Glossary;
-import cz.cvut.kbss.termit.model.Model;
 import cz.cvut.kbss.termit.model.Term;
 import cz.cvut.kbss.termit.model.User;
 import cz.cvut.kbss.termit.model.assignment.FileOccurrenceTarget;
@@ -47,7 +45,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.web.WebAppConfiguration;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.ByteArrayInputStream;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -59,7 +62,10 @@ import static cz.cvut.kbss.termit.environment.Environment.loadFile;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.hasItem;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 // Needed for the request-scoped occurrence resolver bean to work
 @WebAppConfiguration
@@ -105,13 +111,10 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         this.termTwo = new Term();
         termTwo.setUri(TERM_TWO_ID);
         termTwo.setLabel(MultilingualString
-                .create("Územní plán hlavního města Prahy", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                                 .create("Územní plán hlavního města Prahy",
+                                         cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         final User author = Generator.generateUserWithId();
-        this.vocabulary = new cz.cvut.kbss.termit.model.Vocabulary();
-        vocabulary.setLabel("Test Vocabulary");
-        vocabulary.setGlossary(new Glossary());
-        vocabulary.setModel(new Model());
-        vocabulary.setUri(Generator.generateUri());
+        this.vocabulary = Generator.generateVocabularyWithId();
         this.document = new cz.cvut.kbss.termit.model.resource.Document();
         document.setLabel("metropolitan-plan");
         document.setUri(Generator.generateUri());
@@ -181,23 +184,24 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         assert element.size() == 1;
         element.attr(Constants.RDFa.TYPE, cz.cvut.kbss.termit.util.Vocabulary.s_c_slovnik);
 
-        return new ByteArrayInputStream(doc.toString().getBytes(StandardCharsets.UTF_8.name()));
+        return new ByteArrayInputStream(doc.toString().getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
     void generateAnnotationsThrowsAnnotationGenerationExceptionForUnsupportedFileType() throws Exception {
-        final InputStream content = loadFile("application.yml");
-        file.setLabel(generateIncompatibleFile());
-        final AnnotationGenerationException ex = assertThrows(AnnotationGenerationException.class,
-                () -> sut.generateAnnotations(content, file));
-        assertThat(ex.getMessage(), containsString("Unsupported type of file"));
+        try (final InputStream content = loadFile("application.yml")) {
+            file.setLabel(generateIncompatibleFile());
+            final AnnotationGenerationException ex = assertThrows(AnnotationGenerationException.class,
+                                                                  () -> sut.generateAnnotations(content, file));
+            assertThat(ex.getMessage(), containsString("Unsupported type of file"));
+        }
     }
 
     private String generateIncompatibleFile() throws Exception {
         final String tempDir = System.getProperty("java.io.tmpdir");
         config.getFile().setStorage(tempDir);
         final java.io.File docDir = new java.io.File(tempDir + java.io.File.separator +
-                document.getDirectoryName());
+                                                             document.getDirectoryName());
         Files.createDirectory(docDir.toPath());
         docDir.deleteOnExit();
         final java.io.File content = Files.createTempFile(docDir.toPath(), "test", ".txt").toFile();
@@ -219,7 +223,7 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
     void generateAnnotationsThrowsAnnotationGenerationExceptionForUnknownTermIdentifier() throws Exception {
         final InputStream content = setUnknownTermIdentifier(loadFile("data/rdfa-simple.html"));
         final AnnotationGenerationException ex = assertThrows(AnnotationGenerationException.class,
-                () -> sut.generateAnnotations(content, file));
+                                                              () -> sut.generateAnnotations(content, file));
         assertThat(ex.getMessage(), containsString("Term with id "));
         assertThat(ex.getMessage(), containsString("not found"));
     }
@@ -237,11 +241,11 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
     void generateAnnotationsHandlesLargerDocumentAnalysis() throws Exception {
         final Term mp = new Term();
         mp.setLabel(MultilingualString
-                .create("Metropolitní plán", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                            .create("Metropolitní plán", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         mp.setUri(URI.create("http://test.org/pojem/metropolitni-plan"));
         final Term ma = new Term();
         ma.setLabel(MultilingualString
-                .create("Správní území Prahy", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                            .create("Správní území Prahy", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         ma.setUri(URI.create("http://test.org/pojem/spravni-uzemi-prahy"));
         final Term area = new Term();
         area.setLabel(MultilingualString.create("Území", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
@@ -372,7 +376,7 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         final Term otherTerm = new Term();
         otherTerm.setUri(Generator.generateUri());
         otherTerm.setLabel(MultilingualString
-                .create("Other term", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                                   .create("Other term", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         final TextQuoteSelector selector = new TextQuoteSelector("Územní plán");
         selector.setPrefix("RDFa simple");
         selector.setSuffix(" hlavního města Prahy.");
@@ -402,8 +406,9 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         final List<TermOccurrence> occurrencesTwo = termOccurrenceDao.findAllTargeting(file);
         assertEquals(occurrencesOne.size(), occurrencesTwo.size());
         final int instanceCount = em.createNativeQuery("SELECT (count(*) as ?count) WHERE {" +
-                "?x a ?termOccurrence ." +
-                "}", Integer.class).setParameter("termOccurrence", URI.create(Vocabulary.s_c_vyskyt_termu))
+                                                               "?x a ?termOccurrence ." +
+                                                               "}", Integer.class)
+                                    .setParameter("termOccurrence", URI.create(Vocabulary.s_c_vyskyt_termu))
                                     .getSingleResult();
         assertEquals(occurrencesTwo.size(), instanceCount);
     }
@@ -413,8 +418,7 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         generateFile();
         sut.generateAnnotations(loadFile("data/rdfa-simple.html"), file);
         final List<TermOccurrence> occurrencesOne = termOccurrenceDao.findAllTargeting(file);
-        final List<TermOccurrence> confirmed = occurrencesOne.stream().filter(to -> Generator.randomBoolean()).collect(
-                Collectors.toList());
+        final List<TermOccurrence> confirmed = occurrencesOne.stream().filter(to -> Generator.randomBoolean()).toList();
         transactional(() -> confirmed.forEach(to -> {
             to.removeType(Vocabulary.s_c_navrzeny_vyskyt_termu);
             em.merge(to);
